Fix layout bugs

--- a/css/app.styl
+++ b/css/app.styl
@@ -1,2 +1,5 @@
 h1
   color green
+
+.post-box
+  padding 0 0 20px 0
